# domus-2

./: .clang-format  .gitignore  CMakeLists.txt  build-linux  build-web  clean  config.txt  grafo.txt  index.html  lines.py  todo.txt
example-graphs/: grafo114.26.txt  grafo148.28.txt  grafo159.24.txt  graph_12_n30_m39.txt  graph_14_n22_m29.txt  graph_2_n24_m30.txt  graph_68_n25_m39.txt  graph_8_n27_m34.txt
include/config/: config.hpp
include/core/: csv.hpp  print.hpp  utils.hpp
include/core/graph/: attributes.hpp  cycle.hpp  file_loader.hpp  generators.hpp  graph.hpp  graphs_algorithms.hpp  palm_tree.hpp  segment.hpp
include/core/tree/: tree.hpp  tree_algorithms.hpp
include/drawing/: linear_scale.hpp  polygon.hpp  svg_drawer.hpp
include/orthogonal/: area_compacter.hpp  drawing_builder.hpp  drawing_stats.hpp  equivalence_classes.hpp  file_loader.hpp
include/orthogonal/shape/: clauses_functions.hpp  shape.hpp  shape_builder.hpp  variables_handler.hpp
include/planarity/: auslander_parter.hpp  embedding.hpp  interlacement.hpp
include/sat/: cnf.hpp  cnf_builder.hpp  glucose.hpp  kissat.hpp
src/: domus.cpp  gen.cpp  main.cpp  stats.cpp
src/config/: config.cpp
src/core/: csv.cpp  utils.cpp
src/core/graph/: attributes.cpp  cycle.cpp  file_loader.cpp  generators.cpp  graph.cpp  graphs_algorithms.cpp  palm_tree.cpp  segment.cpp
src/core/tree/: tree.cpp  tree_algorithms.cpp
src/drawing/: polygon.cpp  svg_drawer.cpp
src/orthogonal/: area_compacter.cpp  drawing_builder.cpp  drawing_stats.cpp  equivalence_classes.cpp  file_loader.cpp
src/orthogonal/shape/: clauses_functions.cpp  shape.cpp  shape_builder.cpp  variables_handler.cpp
src/planarity/: auslander_parter.cpp  embedding.cpp  interlacement.cpp
src/sat/: cnf.cpp  cnf_builder.cpp  glucose.cpp  kissat.cpp
src/sat/kissat/: configure
src/sat/kissat/src/: clause.c  clause.h  collect.c  congruence.c  dense.c  file.h  internal.c  sort.c  watch.c
static/: domus.data  domus.html  domus.js  domus.wasm  main.js  script.js  style.css
